--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -10,12 +10,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.8'
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          python -m pip install torch
-          python -m pip install pytest hypothesis
+          python -m pip install pip --upgrade
+          python -m pip install -r requirements.txt
       - name: Test with pytest
         run: |
           python -m pytest tests
